--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
                 </button>
             </div>
         </section>
+        <footer class="rodape">
+            <p>Desenvolvido por Fabiana Reis: </p>
+            <nav>
+                <ul>
+                    <li> <a href="https://www.linkedin.com/in/fabiana-reis-dev">Linkedin</a></li>
+                    <li><a href="https://www.instagram.com/fabysouzzza/">Instagram</a></li>
+                </ul>
+            </nav>
+        </footer>
     </main>
-
     <script src="./app.js" defer></script>
 </body>
 </html>
